policies/opa/gatekeeper/constraints/5-dep-resources-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDepResources
metadata:
  name: deployment-resources
spec:
  match:
    kinds:
      - apiGroups: ["*"]
        kinds: ["Deployment"]
    namespaces:
      - "opa-test"
  parameters:
    allowedOps: ["CREATE","UPDATE"]
    errMsg: "INVALID_DEPLOYMENT_RESOURCES"
