policies/opa/gatekeeper/constraints/7-svc-clusterip-ext-ips.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sSvcClusterIpExternalIps
metadata:
  name: svc-clusterip-ext-ips
spec:
  match:
    kinds:
      - apiGroups: ["*"]
        kinds: ["Service"]
    namespaces:
      - "opa-test"
  parameters:
    allowedOps: ["CREATE","UPDATE"]
    errMsg: "INVALID_SERVICE_EXTERNAL_IPS"
